<resources>
    <string name="app_name">微信</string>

    <!--action text-->
    <string name="search">查找</string>
    <string name="more">更多</string>

    <!--menu text-->
    <string name="start_group_chat">发起群聊</string>
    <string name="add_friend">添加朋友</string>
    <string name="scan">扫一扫</string>
    <string name="get_and_pay">收付款</string>
    <string name="help_and_suggest">帮助与反馈</string>

    <!--bottom tab-->
    <string name="chatListString">微信</string>
    <string name="contactString">通讯录</string>
    <string name="discoveryString">发现</string>
    <string name="meString">我</string>

    <!--discovery viewpager-->
    <string name="dis_friendCircleString">朋友圈</string>
    <string name="dis_scanString">扫一扫</string>
    <string name="dis_shakeString">摇一摇</string>
    <string name="dis_nearPeopleString">附近的人</string>
    <string name="dis_driftBottleString">漂流瓶</string>
    <string name="dis_shoppingString">购物</string>
    <string name="dis_gameString">游戏</string>
    <string name="dis_smallProgramString">小程序</string>

</resources>
