<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/actionbar_search_icon"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="always|collapseActionView"
        android:title="@string/search" />

    <item android:id="@+id/action_edit"
        android:title="@string/get_and_pay"
        android:orderInCategory="80"
        android:icon="@drawable/menu_group_chat_icon"
        android:showAsAction="never" />

    <item android:id="@+id/action_share"
        android:title="@string/help_and_suggest"
        android:orderInCategory="90"
        android:icon="@drawable/men_scan_icon"
        android:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/start_group_chat"
        android:orderInCategory="100"
        android:showAsAction="never"/>


</menu>