<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.cier.wechat_60_ui.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/toolbar"
        android:titleTextColor="@color/titleColor" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/bottomTab"
        android:background="@drawable/bottom_tab"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <com.example.cier.wechat_60_ui.MyView.BottomTabView
            android:id="@+id/tab_one"
            myview:icon="@drawable/tab_wechat_icon"
            myview:color="@color/tabViewSelected"
            myview:text="@string/chatListString"
            myview:textSize="12dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <com.example.cier.wechat_60_ui.MyView.BottomTabView
            android:id="@+id/tab_two"
            myview:icon="@drawable/tab_contact_icon"
            myview:color="@color/tabViewSelected"
            myview:text="@string/contactString"
            myview:textSize="12dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <com.example.cier.wechat_60_ui.MyView.BottomTabView
            android:id="@+id/tab_three"
            myview:icon="@drawable/tab_discovery_icon"
            myview:color="@color/tabViewSelected"
            myview:text="@string/discoveryString"
            myview:textSize="12dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <com.example.cier.wechat_60_ui.MyView.BottomTabView
            android:id="@+id/tab_four"
            myview:icon="@drawable/tab_me_icon"
            myview:color="@color/tabViewSelected"
            myview:text="@string/meString"
            myview:textSize="12dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>


</LinearLayout>
